fix(#5367): Postgres RowDescription now honours the projection list on empty result sets
The schema-discovery fallback used when a SELECT returns no rows (the 'WHERE 1=0'
probe issued by Spark/PySpark and other JDBC clients) always announced every
property of the queried type plus the system columns, ignoring what the query
actually projected. The projection is now taken from the parsed SELECT statement
and applied to the discovered columns, so 'SELECT name FROM T WHERE 1=0' reports
only 'name', while '*' and the ArcadeDB 'SELECT FROM T' form keep the full set.

(cherry picked from commit f1338901e14bc9b7e74822d4fc757556e0a367f5)